...
                    title: Text(l10n.selfCheckoutTitle),
                    trailing: const Icon(Icons.chevron_right),
                    onTap: () => context.push(Routes.selfCheckout),
                  ),
                  const Divider(height: 1),
                  ListTile(
                    key: const Key('account-digital'),
                    leading: const Icon(Icons.picture_as_pdf_outlined),
                    title: Text(l10n.digitalTitle),
                    trailing: const Icon(Icons.chevron_right),
                    onTap: () => context.push(Routes.digital),
                  ),
                  const Divider(height: 1),
...
